# boundline

./: -  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENGINEERING_BEST_PRACTICES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  aggregate_lcov.py  analyze_coverage.py  clippy_output.txt  deny.toml  lcov-mixed.info  lcov-root.info  lcov-workflow-lib.info  package-lock.json  package.json  parse_lcov.py  results.txt  rust-toolchain.toml  rustfmt.toml  sonar-project.properties
.antigravity-plugin/: commands.json  manifest.json
.boundline/: session.json
.claude-plugin/: commands.json  manifest.json
.codex-plugin/: plugin.json
.copilot-prompts/: README.md  pack.json
.cursor-plugin/: commands.json  manifest.json
.githooks/: pre-commit  run-rust-checks.sh
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  documentation.yaml  feature-request.md  issue.md
.github/agents/: copilot-instructions.md  speckit.constitution.agent.md
.github/workflows/: ci.yml  coverage.yml  lint.yml  quality.yml  release-apt-packages.yml  release-apt.yml  release-distribution.yml  release-macos.yml  release-windows-distribution.yml  release-windows.yml  release.yml  sbom.yml  sync-homebrew-tap.yml  vulnerabilities.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
assistant/: README.md  plugin-metadata.json
assistant/antigravity/: README.md
assistant/catalog/: model-catalog.toml
assistant/commands/: session-workflow.json
assistant/gemini/: README.md
assistant/global/: manifest.json
assistant/guardians/: architecture-review.md  clean-code-safety.md  rust-language-safety.md  security-boundary-review.md  testing-evidence.md
assistant/guidance/: architecture.md  clean-code.md  framework-cargo.md  framework-core.md  framework-dotnet-services.md  framework-javascript-fullstack.md  framework-jvm-services.md  framework-mobile.md  framework-php-ruby-services.md  framework-python-services.md  language-core.md  language-dotnet.md  language-go.md  language-javascript-typescript.md  language-jvm.md  language-php-ruby.md  language-python.md  language-rust.md  language-shell-automation.md  language-systems.md  security-boundaries.md  testing-core.md  testing-dotnet.md  testing-go.md  testing-javascript.md  testing-jvm.md  testing-mobile.md  testing-php-ruby.md  testing-python.md  testing-rust.md
assistant/packs/: dart-delivery.toml  dotnet-delivery.toml  engineering-foundations.toml  go-delivery.toml  javascript-typescript-delivery.toml  jvm-delivery.toml  mobile-delivery.toml  php-ruby-delivery.toml  python-delivery.toml  rust-delivery.toml  shell-automation-delivery.toml  systems-delivery.toml
assistant/prompts/: copilot-command-pack.md  goal-template.md  starter-prompts.md
crates/boundline-adapters/: Cargo.toml
crates/boundline-adapters/src/: adapters.rs  fixture.rs  lib.rs  orchestrator.rs  registry.rs
crates/boundline-adapters/src/adapters/: framework_protocol.rs
crates/boundline-adapters/src/fixture/: framework_adapter_protocol.rs
crates/boundline-adapters/src/orchestrator/: framework_catalog.rs
crates/boundline-cli/: Cargo.toml
crates/boundline-cli/src/: cli.rs  lib.rs  test_support.rs
crates/boundline-core/: Cargo.toml
crates/boundline-dashboard/: Cargo.toml
crates/boundline-dashboard/src/: app.rs  branding.rs  input.rs  lib.rs  main.rs  render.rs  state.rs
crates/boundline-dashboard/tests/: ui_behaviors.rs
distribution/: canon-bundle.toml  channel-metadata.toml
docs/: adaptive-execution.md  adaptive-governance.md  architecture.md  authority-zones-and-stop-semantics.md  configuration.md  control-graduation-model.md  council-adoption-guide.md  degradation-and-escalation.md  delivery-model.md  getting-started.md  index.md  project-memory-and-evidence-structure.md  reasoning-profile-algorithms.md  release-checklist.md  review-council-algorithms.md  review-voting.md  runtime-confidence-and-calibration.md  session-native-orchestrator-review.md
docs/.vitepress/: config.ts
docs/adapters/: custom-adapters.md  hooks.md  protocol.md  registration.md  speckit.md  stage-ownership.md  (+1 more)
roadmap/: Next - forward-roadmap.md  Next - visible-trust-roadmap.md  S2 - domain-expert-packs-and-runtime-role-selection-spec.md  S2-1 - guidance-and-guardian-capabilities.md  S3 - authority-zoned-delivery-roles-and-review-councils-spec.md  S4 - control-graduation-and-adaptive-governance-spec.md  S5 - advanced-context-intelligence.md  S5.addendum - advanced-context-intelligence-technology-evaluation.md  S5.v2 - advanced-context-intelligence-semantic-acceleration.md  S6 - advanced-multi-agent-reasoning-profiles-spec.md  S6.1 - reasoning-profile-closure.md  S7 - assistant-delight-and-cognitive-affordance-layer.md  S7.1 - post-s6-assistant-delight-follow-through.md  S8 - interactive-delivery-dashboard-iocraft.md  TD-001-complexity-hotspots.md  TD-002-sqlite-vec-activation-and-db-merge-strategy.md  clean-code-guidelines.md  joint-roadmap-graph.md
scripts/: branch-cleanup.sh  check-no-local-paths.sh  coverage.ps1  coverage.sh  docs-dev.sh  install-hooks.sh  install-local.sh  site-dev.ps1  site-dev.sh  sync-distribution-metadata.sh  update-plugin-manifests.sh  validate-assistant-plugins.sh
src/: adapters.rs  assistant_plugin_validation.rs  cli.rs  demo.rs  domain.rs  fixture.rs  lib.rs  orchestrator.rs  registry.rs
tech-docs/: architecture.md  configuration.md  control-graduation-model.md  delivery-model.md  getting-started.md  host-orchestration-contract.md  project-memory-and-evidence-structure.md  reasoning-profile-algorithms.md  release-checklist.md  review-council-algorithms.md  runtime-confidence-and-calibration.md  session-native-orchestrator-review.md
tests/: assistant_plugin_packages.rs  contract.rs  integration.rs  unit.rs
(+1843 files in other folders)
