[workspace]
members = [
	".",
	"crates/boundline-core",
	"crates/boundline-adapters",
	"crates/boundline-cli",
]
resolver = "3"

[workspace.package]
version = "0.64.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15.7"
boundline-core = { path = "crates/boundline-core" }
boundline-adapters = { path = "crates/boundline-adapters" }
boundline-cli = { path = "crates/boundline-cli" }

[package]
name = "boundline"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
semantic-acceleration = ["boundline-adapters/semantic-acceleration"]
sqlite-vec = ["semantic-acceleration", "boundline-adapters/sqlite-vec"]

[dependencies]
boundline-core.workspace = true
boundline-adapters.workspace = true
boundline-cli.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
toml.workspace = true
dotenvy.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
