[package]
name = "boundline-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
semantic-acceleration = []
sqlite-vec = ["semantic-acceleration"]

[dependencies]
boundline-core.workspace = true
clap.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
tracing.workspace = true
uuid.workspace = true
toml.workspace = true