[package]
name = "boundline-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[features]
default = []
semantic-acceleration = []
sqlite-vec = ["semantic-acceleration", "dep:sqlite-vec"]

[dependencies]
boundline-core.workspace = true
clap.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
sqlite-vec = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
tracing.workspace = true
uuid.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
