[package]
name = "boundline-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
boundline-core.workspace = true
boundline-adapters.workspace = true
clap.workspace = true
dialoguer.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"