[package]
name = "boundline-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
boundline-core.workspace = true
boundline-adapters.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
